# baleio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fa.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
baleio/: __init__.py  __meta__.py  exceptions.py
baleio/client/: __init__.py  bot.py  default.py
baleio/client/session/: __init__.py  aiohttp.py  base.py
baleio/dispatcher/: __init__.py  dispatcher.py  router.py
baleio/dispatcher/event/: __init__.py  handler.py  observer.py
baleio/enums/: __init__.py
baleio/filters/: __init__.py  base.py  callback_data.py  command.py  exception.py  logic.py  state.py
baleio/fsm/: __init__.py  context.py  state.py
baleio/fsm/storage/: __init__.py  base.py  memory.py
baleio/types/: __init__.py  attachments.py  base.py  callback.py  chat.py  error.py  input_file.py  input_media.py  keyboards.py  media.py  message.py  misc.py  payments.py  update.py  user.py
baleio/utils/: __init__.py  call.py  keyboard.py  markdown.py
docs/: Makefile  api.md  callback_data.md  conf.py  dispatcher.md  errors.md  filters.md  fsm.md  index.md  installation.md  keyboards.md  quickstart.md  requirements.txt
docs/_static/: custom.css
examples/: echo_bot.py  fsm_form_bot.py  quickstart.py  webhook_bot.py
site/: index.html
tests/: conftest.py  test_bot_and_keyboard.py  test_callback_data.py  test_dispatch.py  test_errors.py  test_serialization.py  test_types.py
